# golden_mediator

./: Strucrure.md  grok_dialog_workflow.md  start  Устройство разметки.md
Build rules/: Strucrure.md  Построение Узла.md
Build rules/Наброски/: Research.md
Корень Общения/Узлы/Главный Вычислитель/Устройство/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.inference.yml
Корень Общения/Узлы/Главный Вычислитель/Устройство/k8s/: deployment.yaml  service.yaml
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/: main.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/adapters/: kafka_adapter.rs  mod.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/application/: mod.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/application/health_slice/: mod.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/application/inference_slice/: command_handler.rs  mod.rs  ports.rs  service.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/domain/inference/: command.rs  event.rs  model.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/infrastructure/: mod.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/infrastructure/engines/: mod.rs  ollama_client.rs  tensorrt_llm_client.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/infrastructure/kafka/: consumer.rs  producer.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/src/infrastructure/telemetry/: metrics.rs
Корень Общения/Узлы/Главный Вычислитель/Устройство/tests/integration/: inference_flow_test.rs
(+43 files in other folders)
